UI update and class

--- a/webcam_segmentation.ipynb
+++ b/webcam_segmentation.ipynb
@@ -11,12 +11,13 @@
     "# !pip3 install torch torchvision --index-url https://download.pytorch.org/whl/cu118\n",
     "# !pip install opencv-python\n",
     "# !pip install pycocotools\n",
-    "# !pip install cython"
+    "# !pip install cython\n",
+    "# !pip install ttkthemes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 247,
    "id": "4efb0a6e",
    "metadata": {},
    "outputs": [],
@@ -37,12 +38,14 @@
     "from tkinter import ttk\n",
     "import PIL.Image, PIL.ImageTk\n",
     "from tkinter import BooleanVar, Scale\n",
-    "from PIL import Image, ImageTk"
+    "from PIL import Image, ImageTk\n",
+    "from tkinter.font import Font\n",
+    "from ttkthemes import ThemedStyle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 186,
    "id": "b00eb48b",
    "metadata": {},
    "outputs": [],
@@ -68,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 187,
    "id": "91cd53d7",
    "metadata": {},
    "outputs": [
@@ -90,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 188,
    "id": "7c78ad97",
    "metadata": {},
    "outputs": [],
@@ -108,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 189,
    "id": "dcea431d",
    "metadata": {},
    "outputs": [],
@@ -123,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 190,
    "id": "fea1d96c",
    "metadata": {},
    "outputs": [],
@@ -235,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 191,
    "id": "01a63ec5",
    "metadata": {},
    "outputs": [],
@@ -258,15 +261,12 @@
     "\n",
     "    # Prepare the segmented image for display and return it\n",
     "    res = prep_display(preds, frame, None, None, undo_transform=False)\n",
-    "    return res\n",
-    "\n",
-    "    # Example of how to use the 'evaluateimg' function\n",
-    "    image = evaluateimg(frame)  # 'frame' is assumed to be an input image here\n"
+    "    return res\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 192,
    "id": "b76e908c",
    "metadata": {},
    "outputs": [],
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 193,
    "id": "fcc98ec7",
    "metadata": {
     "scrolled": true
@@ -290,7 +290,7 @@
        "'\\n\\nsetting()\\n# Open the default camera (camera index 0)\\ncap = cv2.VideoCapture(0)\\n# Continuously capture frames from the webcam\\nwhile True:\\n    # Read a frame from the camera\\n    ret, frame = cap.read()\\n\\n    # Check if the frame was successfully captured\\n    if not ret:\\n        # If not, break out of the loop\\n        break\\n    \\n    image = evaluateimg(frame)\\n    cv2.imshow(\"Camera Output\", image)\\n\\n    # Check if the \\'q\\' key is pressed to exit the loop\\n    if cv2.waitKey(1) & 0xFF == ord(\\'q\\'):\\n        break\\n\\n# Release the webcam (release camera resources)\\ncap.release()\\n\\n# Close all OpenCV windows\\n\\ncv2.destroyAllWindows()\\n\\nprint(\"classes we found in image\", class_list)\\n\\n'"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 194,
    "id": "a434084f",
    "metadata": {},
    "outputs": [],
@@ -366,8 +366,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
-   "id": "1764d657",
+   "execution_count": 195,
+   "id": "657a3b12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 251,
    "id": "f11af102",
    "metadata": {},
    "outputs": [],
@@ -441,7 +441,7 @@
     "display_masks_checkbox = ttk.Checkbutton(root, text=\"Display Masks\", variable=display_masks_var, command=toggle_display_masks)\n",
     "display_masks_checkbox.pack()\n",
     "\n",
-    "display_text_bbx_checkbox = ttk.Checkbutton(root, text=\"Display Text/BBX\", variable=display_text_bbx_var, command=toggle_display_text_bbx)\n",
+    "display_text_bbx_checkbox = ttk.Checkbutton(root, text=\"Display Text/BB\", variable=display_text_bbx_var, command=toggle_display_text_bbx)\n",
     "display_text_bbx_checkbox.pack()\n",
     "\n",
     "# Sliders\n",
@@ -464,7 +464,7 @@
     "top_k_scale.pack()\n",
     "\n",
     "# Create a label for displaying dynamic strings\n",
-    "set_label = ttk.Label(root, text=\"\")\n",
+    "set_label = ttk.Label(root, text=\"Classes\")\n",
     "set_label.pack()\n",
     "\n",
     "update_camera_feed()\n",
@@ -477,8 +477,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
-   "id": "5f0733e5",
+   "execution_count": 249,
+   "id": "ff5d598f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,8 +509,106 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 244,
+   "id": "7a59bca4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class UIApp:\n",
+    "    def __init__(self, root):\n",
+    "        self.root = root\n",
+    "        self.root.title(\"Image Classifier\")\n",
+    "\n",
+    "        self.cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "        self.label = ttk.Label(root)\n",
+    "        self.label.pack(side=\"right\")\n",
+    "\n",
+    "        # Variables\n",
+    "        self.cuda_var = BooleanVar()\n",
+    "        self.display_masks_var = BooleanVar()\n",
+    "        self.display_text_bbx_var = BooleanVar()\n",
+    "\n",
+    "        self.cuda_var.set(cuda_enabled)\n",
+    "        self.display_masks_var.set(display_masks_enabled)\n",
+    "        self.display_text_bbx_var.set(display_text_bbx_enabled)\n",
+    "\n",
+    "        # Checkboxes\n",
+    "        self.cuda_checkbox = ttk.Checkbutton(root, text=\"CUDA Enable\", variable=self.cuda_var, command=toggle_cuda)\n",
+    "        self.cuda_checkbox.pack()\n",
+    "\n",
+    "        self.display_masks_checkbox = ttk.Checkbutton(root, text=\"Display Masks\", variable=self.display_masks_var, command=toggle_display_masks)\n",
+    "        self.display_masks_checkbox.pack()\n",
+    "\n",
+    "        self.display_text_bbx_checkbox = ttk.Checkbutton(root, text=\"Display Text/BBX\", variable=self.display_text_bbx_var, command=toggle_display_text_bbx)\n",
+    "        self.display_text_bbx_checkbox.pack()\n",
+    "\n",
+    "        # Sliders\n",
+    "        self.sc_label = ttk.Label(root, text=\"Select Criteria\")\n",
+    "        self.sc_label.pack()\n",
+    "        self.sc_scale = Scale(root, from_=0, to=1, resolution=0.01, orient=\"horizontal\", command=update_sc)\n",
+    "        self.sc_scale.set(sc)\n",
+    "        self.sc_scale.pack()\n",
+    "\n",
+    "        self.img_scale_label = ttk.Label(root, text=\"Image Scale\")\n",
+    "        self.img_scale_label.pack()\n",
+    "        self.img_scale_scale = Scale(root, from_=0.5, to=2, resolution=0.01, orient=\"horizontal\", command=update_img_scale)\n",
+    "        self.img_scale_scale.set(img_scale)\n",
+    "        self.img_scale_scale.pack()\n",
+    "\n",
+    "        self.top_k_label = ttk.Label(root, text=\"Top K Boxes\")\n",
+    "        self.top_k_label.pack()\n",
+    "        \n",
+    "        self.top_k_scale = Scale(root, from_=1, to=100, orient=\"horizontal\", command=update_top_k)\n",
+    "        self.top_k_scale.set(top_k)\n",
+    "        self.top_k_scale.pack()\n",
+    "\n",
+    "        # Create a label for displaying dynamic strings\n",
+    "        self.set_label = ttk.Label(root, text=\"Classes\")\n",
+    "        self.set_label.pack()\n",
+    "\n",
+    "        self.update_camera_feed()\n",
+    "        self.update_set_label()\n",
+    "\n",
+    "    def update_camera_feed(self):\n",
+    "        global class_list\n",
+    "        ret, frame = self.cap.read()\n",
+    "\n",
+    "        if ret:\n",
+    "            class_list.clear()\n",
+    "            image = evaluateimg(frame)\n",
+    "\n",
+    "            #cv2.imshow('output detection', image)\n",
+    "            img = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "            img = PIL.Image.fromarray(img)\n",
+    "            w, h = img.size\n",
+    "            img = img.resize((int(w*img_scale), int(h*img_scale)))\n",
+    "            img = PIL.ImageTk.PhotoImage(image=img)\n",
+    "            self.label.config(image=img)\n",
+    "            self.label.image = img\n",
+    "\n",
+    "        self.root.after(10, self.update_camera_feed)\n",
+    "\n",
+    "    def update_set_label(self):\n",
+    "        current_contents = '\\n'.join(class_list)  \n",
+    "        self.set_label.config(text=current_contents)\n",
+    "        self.root.after(1000, self.update_set_label)  \n",
+    "\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    setting()\n",
+    "    root = tk.Tk()\n",
+    "    app = UIApp(root)\n",
+    "    root.mainloop()\n",
+    "    app.cap.release()\n",
+    "    cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "41e3958c",
+   "id": "c7e5ef7f",
    "metadata": {},
    "outputs": [],
    "source": []
