--- a/App_withUI.ipynb
+++ b/App_withUI.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "722110d2",
+   "execution_count": 2,
+   "id": "e5dd22e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Torch not compiled with CUDA enabled",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcv2\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01myolact\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Yolact\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcollections\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m defaultdict\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbackends\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcudnn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mcudnn\u001b[39;00m\n",
+      "File \u001b[1;32m~\\Desktop\\project\\ML\\webcamSegmentation\\yolact.py:22\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfunctions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MovingAverage, make_net\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# This is required for Pytorch 1.0.1 on Windows to initialize Cuda on some driver versions.\u001b[39;00m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;66;03m# See the bug report here: https://github.com/pytorch/pytorch/issues/17108\u001b[39;00m\n\u001b[1;32m---> 22\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcuda\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcurrent_device\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;66;03m# As of March 10, 2019, Pytorch DataParallel still doesn't support JIT Script Modules\u001b[39;00m\n\u001b[0;32m     27\u001b[0m use_jit \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mdevice_count() \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\Fraud\\lib\\site-packages\\torch\\cuda\\__init__.py:674\u001b[0m, in \u001b[0;36mcurrent_device\u001b[1;34m()\u001b[0m\n\u001b[0;32m    672\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcurrent_device\u001b[39m() \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n\u001b[0;32m    673\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124;03m\"\"\"Returns the index of a currently selected device.\"\"\"\u001b[39;00m\n\u001b[1;32m--> 674\u001b[0m     \u001b[43m_lazy_init\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    675\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m torch\u001b[38;5;241m.\u001b[39m_C\u001b[38;5;241m.\u001b[39m_cuda_getDevice()\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\Fraud\\lib\\site-packages\\torch\\cuda\\__init__.py:239\u001b[0m, in \u001b[0;36m_lazy_init\u001b[1;34m()\u001b[0m\n\u001b[0;32m    235\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[0;32m    236\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot re-initialize CUDA in forked subprocess. To use CUDA with \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    237\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmultiprocessing, you must use the \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mspawn\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m start method\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    238\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(torch\u001b[38;5;241m.\u001b[39m_C, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_cuda_getDeviceCount\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m--> 239\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTorch not compiled with CUDA enabled\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    240\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _cudart \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    241\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\n\u001b[0;32m    242\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlibcudart functions unavailable. It looks like you have a broken build?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mAssertionError\u001b[0m: Torch not compiled with CUDA enabled"
+     ]
+    }
+   ],
    "source": [
     "#imports\n",
     "import torch\n",
@@ -30,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "ac95338b",
+   "execution_count": 2,
+   "id": "ba34ef0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e6e523c1",
+   "id": "39e76d60",
    "metadata": {},
    "outputs": [
     {
@@ -73,11 +88,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\deepa\\anaconda3\\envs\\newenv\\lib\\site-packages\\torch\\jit\\_recursive.py:260: UserWarning: 'downsample_layers' was found in ScriptModule constants,  but it is a non-constant submodule. Consider removing it.\n",
-      "  warnings.warn(\"'{}' was found in ScriptModule constants, \"\n",
       "C:\\Users\\deepa\\anaconda3\\envs\\newenv\\lib\\site-packages\\torch\\jit\\_recursive.py:260: UserWarning: 'pred_layers' was found in ScriptModule constants,  but it is a non-constant submodule. Consider removing it.\n",
       "  warnings.warn(\"'{}' was found in ScriptModule constants, \"\n",
       "C:\\Users\\deepa\\anaconda3\\envs\\newenv\\lib\\site-packages\\torch\\jit\\_recursive.py:260: UserWarning: 'lat_layers' was found in ScriptModule constants,  but it is a non-constant submodule. Consider removing it.\n",
+      "  warnings.warn(\"'{}' was found in ScriptModule constants, \"\n",
+      "C:\\Users\\deepa\\anaconda3\\envs\\newenv\\lib\\site-packages\\torch\\jit\\_recursive.py:260: UserWarning: 'downsample_layers' was found in ScriptModule constants,  but it is a non-constant submodule. Consider removing it.\n",
       "  warnings.warn(\"'{}' was found in ScriptModule constants, \"\n"
      ]
     },
@@ -100,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "08fa7a9e",
+   "id": "f9a842d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "66c3cd15",
+   "id": "fd419034",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,8 +144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "abc4a8c6",
+   "execution_count": 6,
+   "id": "8db40bba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,8 +245,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "60e9bbfd",
+   "execution_count": 7,
+   "id": "14ae569a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,8 +268,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "4bc354d6",
+   "execution_count": 8,
+   "id": "0f5e6afc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,8 +280,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
-   "id": "215adb6d",
+   "execution_count": 9,
+   "id": "fb300ab7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,8 +437,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "id": "d2f2fc24",
+   "execution_count": 23,
+   "id": "00c58cba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,8 +447,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "718e9a2f",
+   "execution_count": null,
+   "id": "d5d53650",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -441,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97d090e7",
+   "id": "75bd1696",
    "metadata": {},
    "outputs": [],
    "source": []
